Prevent scrollbar adding width to main content

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -172,6 +172,7 @@ input.topic-name {
 .layout-main {
     background-color: var(--background-color);
     overflow: auto;
+    overflow-y: overlay;
 }
 
 .content {
